# printer-test-page

./: .env.example  .gitignore  README.md  printer-test-page.service  printer-test-page.timer  pyproject.toml
src/printer_test_page/: __init__.py  cli.py  colors.py  metadata.py  page.py  patterns.py
tests/: test_colors.py  test_metadata.py  test_render.py
