[project]
name = "printer-test-page"
version = "0.1.0"
description = "Generate an inkjet printer test page (CMYK/RGB gradients, nozzle/alignment patterns, synthetic test target) as a PDF."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "reportlab>=4.1",
]

[project.scripts]
printer-test-page = "printer_test_page.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/printer_test_page"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ty>=0.0.1a1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ty.environment]
python-version = "3.12"
